@@ -1,6 +1,8 @@
 package com.endlesnights.torchslabsmod.blocks.vanilla;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Random;
 
 import javax.annotation.Nullable;
 
@@ -14,6 +16,7 @@ import net.minecraft.client.color.block.BlockColor;
 import net.minecraft.client.renderer.BiomeColors;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.world.InteractionHand;
@@ -47,6 +50,8 @@ import net.minecraft.world.phys.shapes.BooleanOp;
 import net.minecraft.world.phys.shapes.CollisionContext;
 import net.minecraft.world.phys.shapes.Shapes;
 import net.minecraft.world.phys.shapes.VoxelShape;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.api.distmarker.OnlyIn;
 
 public class BlockPadCandle extends CandleBlock{
 
@@ -61,10 +66,10 @@ public class BlockPadCandle extends CandleBlock{
 	   private static final Int2ObjectMap<List<Vec3>> PARTICLE_OFFSETS = Util.make(() -> {
 		      Int2ObjectMap<List<Vec3>> int2objectmap = new Int2ObjectOpenHashMap<>();
 		      int2objectmap.defaultReturnValue(ImmutableList.of());
-		      int2objectmap.put(1, ImmutableList.of(new Vec3(0.5D, 0.594D, 0.5D)));
-		      int2objectmap.put(2, ImmutableList.of(new Vec3(0.375D, 0.534, 0.5D), new Vec3(0.625D, 0.594D, 0.44D)));
-		      int2objectmap.put(3, ImmutableList.of(new Vec3(0.5D, 0.313D, 0.625D), new Vec3(0.375D, 0.534, 0.5D), new Vec3(0.56D, 0.594D, 0.44D)));
-		      int2objectmap.put(4, ImmutableList.of(new Vec3(0.44D, 0.407, 0.56D), new Vec3(0.625D, 0.534, 0.56D), new Vec3(0.375D, 0.534, 0.375D), new Vec3(0.56D, 0.594D, 0.375D)));
+		      int2objectmap.put(1, List.of(new Vec3(0.5D, 0.5D, 0.5D)));
+		      int2objectmap.put(2, List.of(new Vec3(0.375D, 0.44D, 0.5D), new Vec3(0.625D, 0.5D, 0.44D)));
+		      int2objectmap.put(3, List.of(new Vec3(0.5D, 0.313D, 0.625D), new Vec3(0.375D, 0.44D, 0.5D), new Vec3(0.56D, 0.5D, 0.44D)));
+		      int2objectmap.put(4, List.of(new Vec3(0.44D, 0.313D, 0.56D), new Vec3(0.625D, 0.44D, 0.56D), new Vec3(0.375D, 0.44D, 0.375D), new Vec3(0.56D, 0.5D, 0.375D)));
 		      return Int2ObjectMaps.unmodifiable(int2objectmap);
 		   });
 	   
@@ -72,7 +77,12 @@ public class BlockPadCandle extends CandleBlock{
 	   
 	public BlockPadCandle(Properties properties, Item item) {
 		super(properties);
-		this.registerDefaultState(this.stateDefinition.any().setValue(FACING, Direction.NORTH).setValue(CANDLES, Integer.valueOf(1)).setValue(LIT, Boolean.valueOf(false)).setValue(WATERLOGGED, Boolean.valueOf(false)));
+		this.registerDefaultState(this.stateDefinition.any()
+				.setValue(FACING, Direction.NORTH)
+				.setValue(CANDLES, Integer.valueOf(1))
+				.setValue(LIT, Boolean.valueOf(false))
+				.setValue(WATERLOGGED, Boolean.valueOf(false))
+		);
 		this.pickerItem = item;
 	}
 
@@ -85,30 +95,42 @@ public class BlockPadCandle extends CandleBlock{
 		switch(p_152817_.getValue(CANDLES)) {
 			case 1:
 			default:
-				return ONE_AABB;
+				return rotateShape(this.defaultBlockState().getValue(FACING),p_152817_.getValue(FACING) ,ONE_AABB);
 			case 2:
-				return TWO_AABB;
+				return rotateShape(this.defaultBlockState().getValue(FACING),p_152817_.getValue(FACING) ,TWO_AABB);
 			case 3:
-				return THREE_AABB;
+				return rotateShape(this.defaultBlockState().getValue(FACING),p_152817_.getValue(FACING) ,THREE_AABB);
 			case 4:
-				return FOUR_AABB;
+				return rotateShape(this.defaultBlockState().getValue(FACING),p_152817_.getValue(FACING) ,FOUR_AABB);
 		}
 	}
 	
+	public static VoxelShape rotateShape(Direction from, Direction to, VoxelShape shape) {
+		VoxelShape[] buffer = new VoxelShape[]{ shape, Shapes.empty() };
+
+		int times = (to.get2DDataValue() - from.get2DDataValue() + 4) % 4;
+		for (int i = 0; i < times; i++) {
+			buffer[0].forAllBoxes((minX, minY, minZ, maxX, maxY, maxZ) -> buffer[1] = Shapes.or(buffer[1], Shapes.create(1-maxZ, minY, minX, 1-minZ, maxY, maxX)));
+			buffer[0] = buffer[1];
+			buffer[1] = Shapes.empty();
+		}
+
+		return buffer[0];		
+	}
+	
 	@Override
-	public VoxelShape getCollisionShape(BlockState state, BlockGetter worldIn, BlockPos pos, CollisionContext context)
-	{
+	public VoxelShape getCollisionShape(BlockState state, BlockGetter worldIn, BlockPos pos, CollisionContext context) {
 		switch(state.getValue(CANDLES)) {
 		case 1:
 		default:
-			return ONE_AABB;
+			return rotateShape(this.defaultBlockState().getValue(FACING),state.getValue(FACING) ,ONE_AABB);
 		case 2:
-			return TWO_AABB;
+			return rotateShape(this.defaultBlockState().getValue(FACING),state.getValue(FACING) ,TWO_AABB);
 		case 3:
-			return THREE_AABB;
+			return rotateShape(this.defaultBlockState().getValue(FACING),state.getValue(FACING) ,THREE_AABB);
 		case 4:
-			return FOUR_AABB;
-		}
+			return rotateShape(this.defaultBlockState().getValue(FACING),state.getValue(FACING) ,FOUR_AABB);
+	}
 	}
 	@Override
 	public boolean canSurvive(BlockState state, LevelReader worldIn, BlockPos blockpos)
@@ -129,69 +151,106 @@ public class BlockPadCandle extends CandleBlock{
 		return !canSurvive(stateIn, worldIn, currentPos) ? Blocks.AIR.defaultBlockState() : stateIn;
 	}
 	
-	   protected Iterable<Vec3> getParticleOffsets(BlockState p_152812_) {
-		      return PARTICLE_OFFSETS.get(p_152812_.getValue(CANDLES).intValue());
-		}
-	   @Override
-	   public InteractionResult use(BlockState state, Level worldIn, BlockPos pos, Player playerIn, InteractionHand hand, BlockHitResult p_225533_6_) {
-		   ItemStack itemStack = playerIn.getItemInHand(hand);
-		   if(itemStack.getItem() instanceof FlintAndSteelItem) {
-			   return onItemUseFlint(state, worldIn, pos, playerIn, hand, p_225533_6_);
-		   }
-		   return super.use(state, worldIn, pos, playerIn, hand, p_225533_6_);
-	   }
-	   
-	   public static InteractionResult onItemUseFlint(BlockState state, Level worldIn, BlockPos pos, Player playerIn, InteractionHand hand, BlockHitResult p_225533_6_) {
-		   
-		    UseOnContext context = new UseOnContext(playerIn, hand, p_225533_6_);
-			Level world = context.getLevel();
-			BlockPos blockpos = context.getClickedPos();
-			
-		    BlockState blockstate = state
-					.setValue(CandleBlock.LIT, true)
-					.setValue(CandleBlock.CANDLES, state.getValue(CandleBlock.CANDLES))
-					.setValue(CandleBlock.WATERLOGGED, state.getValue(CandleBlock.WATERLOGGED)
-				);
-		    
-		    if (blockstate != null)
-		    {
-		    	Player playerentity = context.getPlayer();
-				world.playSound(playerentity, blockpos, SoundEvents.FLINTANDSTEEL_USE, SoundSource.BLOCKS, 1.0F, 1.0F);			    
-				world.setBlockAndUpdate(blockpos, blockstate);
-			    if (playerentity != null)
-			    {
-				context.getItemInHand().hurtAndBreak(1, playerentity, (p_220043_1_) -> {
-					    p_220043_1_.broadcastBreakEvent(context.getHand());
-					});
-			    }
-			    return InteractionResult.SUCCESS;
-		    }
-			
-		   return InteractionResult.FAIL;
-	   }
-
-		@Override
-		public boolean isPathfindable(BlockState state, BlockGetter worldIn, BlockPos pos, PathComputationType type) {
-			      return type == PathComputationType.AIR && !this.hasCollision ? true : super.isPathfindable(state, worldIn, pos, type);
-		}	
-			
-		public static class ColorHandler implements BlockColor 
-		{
-			@Override
-			public int getColor(BlockState state, @Nullable BlockAndTintGetter  reader , @Nullable BlockPos blockPos, int tintIndex)
-			{
-				if(reader != null && blockPos != null)
-				{
-					return BiomeColors.getAverageFoliageColor(reader, blockPos);
-				}
-				return GrassColor.get(0.5D, 1.0D);
-			}
-		}
-	   
-		@Override
-		public ItemStack getCloneItemStack(BlockState state, HitResult target, BlockGetter  world, BlockPos pos, Player player)
-		{
-			return new ItemStack(pickerItem);
+	@Override
+	protected Iterable<Vec3> getParticleOffsets(BlockState p_152812_) {
+		
+		if(p_152812_.getValue(FACING) == Direction.NORTH) {
+			return PARTICLE_OFFSETS.get(p_152812_.getValue(CANDLES).intValue());
 		}
 		
+		List<Vec3> vecList = new ArrayList<>();
+		for(Vec3 v : PARTICLE_OFFSETS.get(p_152812_.getValue(CANDLES).intValue())) {
+			
+				float angle = 1.5708f; //west
+				if(p_152812_.getValue(FACING) == Direction.EAST) {
+					angle = -1.5708f;
+				}
+				else if(p_152812_.getValue(FACING) == Direction.SOUTH) {
+					angle = 3.1416f;
+				}
+				Vec3 newV = new Vec3(
+						Math.cos(angle) * ( v.x - 0.5D) + Math.sin(angle) * ( v.z - 0.5D ) + 0.5D,
+						v.y,
+						Math.cos(angle) * ( v.z - 0.5D) - Math.sin(angle) * ( v.x - 0.5D ) + 0.5D
+				);
+				vecList.add(newV);
+			}
+			
+		return vecList;
+	}
+	
+	@OnlyIn(Dist.CLIENT)
+	public void animateTick(BlockState p_151929_, Level p_151930_, BlockPos p_151931_, Random p_151932_) {
+	      if (p_151929_.getValue(LIT)) {
+	         this.getParticleOffsets(p_151929_).forEach((p_151917_) -> {
+	            addParticlesAndSound(p_151930_, p_151917_.add((double)p_151931_.getX(), (double)p_151931_.getY(), (double)p_151931_.getZ()), p_151932_);
+	         });
+	      }
+	   }
+   private static void addParticlesAndSound(Level p_151910_, Vec3 p_151911_, Random p_151912_) {
+	      float f = p_151912_.nextFloat();
+	      if (f < 0.3F) {
+	         p_151910_.addParticle(ParticleTypes.SMOKE, p_151911_.x, p_151911_.y, p_151911_.z, 0.0D, 0.0D, 0.0D);
+	         if (f < 0.17F) {
+	            p_151910_.playLocalSound(p_151911_.x + 0.5D, p_151911_.y + 0.5D, p_151911_.z + 0.5D, SoundEvents.CANDLE_AMBIENT, SoundSource.BLOCKS, 1.0F + p_151912_.nextFloat(), p_151912_.nextFloat() * 0.7F + 0.3F, false);
+	         }
+	      }
+
+	      p_151910_.addParticle(ParticleTypes.SMALL_FLAME, p_151911_.x, p_151911_.y, p_151911_.z, 0.0D, 0.0D, 0.0D);
+	   }
+   
+	@Override
+	public InteractionResult use(BlockState state, Level worldIn, BlockPos pos, Player playerIn, InteractionHand hand, BlockHitResult p_225533_6_) {
+		ItemStack itemStack = playerIn.getItemInHand(hand);
+		if(itemStack.getItem() instanceof FlintAndSteelItem) {
+			return onItemUseFlint(state, worldIn, pos, playerIn, hand, p_225533_6_);
+		}
+		return super.use(state, worldIn, pos, playerIn, hand, p_225533_6_);
+	}
+	   
+	public static InteractionResult onItemUseFlint(BlockState state, Level worldIn, BlockPos pos, Player playerIn, InteractionHand hand, BlockHitResult p_225533_6_) {
+		   
+		UseOnContext context = new UseOnContext(playerIn, hand, p_225533_6_);
+		Level world = context.getLevel();
+		BlockPos blockpos = context.getClickedPos();
+			
+		BlockState blockstate = state
+			.setValue(CandleBlock.LIT, true)
+			.setValue(CandleBlock.CANDLES, state.getValue(CandleBlock.CANDLES))
+			.setValue(CandleBlock.WATERLOGGED, state.getValue(CandleBlock.WATERLOGGED)
+		);
+		    
+		if (blockstate != null) {
+			Player playerentity = context.getPlayer();
+			world.playSound(playerentity, blockpos, SoundEvents.FLINTANDSTEEL_USE, SoundSource.BLOCKS, 1.0F, 1.0F);			    
+			world.setBlockAndUpdate(blockpos, blockstate);
+			if (playerentity != null) {
+				context.getItemInHand().hurtAndBreak(1, playerentity, (p_220043_1_) -> {
+					p_220043_1_.broadcastBreakEvent(context.getHand());
+				});
+			}
+			return InteractionResult.SUCCESS;
+		}
+		return InteractionResult.FAIL;
+	}
+
+	@Override
+	public boolean isPathfindable(BlockState state, BlockGetter worldIn, BlockPos pos, PathComputationType type) {
+		return type == PathComputationType.AIR && !this.hasCollision ? true : super.isPathfindable(state, worldIn, pos, type);
+	}	
+			
+	public static class ColorHandler implements BlockColor {
+		@Override
+		public int getColor(BlockState state, @Nullable BlockAndTintGetter  reader , @Nullable BlockPos blockPos, int tintIndex) {
+			if(reader != null && blockPos != null) {
+				return BiomeColors.getAverageFoliageColor(reader, blockPos);
+			}
+			return GrassColor.get(0.5D, 1.0D);
+		}
+	}
+			   
+	@Override
+	public ItemStack getCloneItemStack(BlockState state, HitResult target, BlockGetter  world, BlockPos pos, Player player) {
+		return new ItemStack(pickerItem);
+	}	
 }
